# tauri-number-guess

./: .gitignore  README.md  blog.md
tauri-app/: package-lock.json  package.json
tauri-app/src/: App.tsx
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/src/: lib.rs  main.rs
tutorials/: 00-introduction.md  01-setup.md  02-project-structure.md  03-frontend.md  04-backend.md  05-ipc.md  06-building.md
